# qt51crashonfiledialog

./: CMakeLists.txt  README.md  main.cpp  main.qml  qresources.qrc  stack.txt
